--- a/style.css
+++ b/style.css
@@ -1,20 +1,110 @@
 /* default css  */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: #ffffff;
-    font-family: "PT Sans", sans-serif;
-    text-decoration: none;
-    list-style: none;
-  
-    /* border: 1px solid red; */
-  }
-  
-  
-  html {
-    font-size: 62.5%;
-  }
-  img{
-    border-radius: 3px;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* color: #ffffff; */
+  font-family: "PT Sans", sans-serif;
+  text-decoration: none;
+  list-style: none;
+
+  /* border: 1px solid red; */
+}
+
+html,
+body {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  height: 100%;
+}
+img {
+  border-radius: 3px;
+}
+
+:root {
+  --purple500: #281154;
+  --purple300: #270082;
+  --purple600: #1b0058;
+  --red600: #dc0000;
+  --body: #f9f6ff;
+  --max-width: 1200px;
+}
+
+.container {
+  max-width: var(--max-width);
+  margin: 0 auto;
+}
+
+/* Navbar code  */
+.header {
+  background-color: var(--purple300);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  /* background-color: var(--purple500); */
+  color: var(--body);
+}
+.logo {
+  color: var(--body);
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.nav {
+  display: flex;
+}
+.nav-link {
+  color: var(--body);
+  font-size: 1.6rem;
+  margin: 0 1rem;
+  transition: all 0.3s ease-in-out;
+}
+.nav-link:hover {
+  color: var(--red600);
+}
+
+/* hero section  */
+
+.hero {
+  background-image: url(./Assets/hero_image.png);
+  min-height: 100%;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  /* background-color: var(--purple500); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+}
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.hero-title {
+  color: var(--body);
+  font-size: 4rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  /* background-color: var(--purple500); */
+}
+.hero-subtitle {
+  color: var(--body);
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+.hero-description {
+  color: var(--body);
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+}
