--- a/style.css
+++ b/style.css
@@ -246,3 +246,54 @@ img {
   margin-top: 15px;
   width: 80%;
 }
+
+
+/* gift card section  */
+
+.gift-content{
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  margin-top: 50px;
+}
+.gift-img{
+ display: flex;
+ align-items: center;
+ justify-content: end;
+ margin-right: 50px;
+}
+.gift-card{
+  width: 75%;
+
+  
+}
+.gift-title{
+  font-size: 2.8rem;
+  color: #000000;
+  /* font-weight: 200; */
+  /* text-align: center; */
+  /* margin-top: 10px; */
+}
+.gift-desc{
+  
+  font-size: 1.5rem;
+  color: #000000;
+  width: 50%;
+  text-align: left;
+  
+}
+.gift-para{
+margin-top: 25px;
+}
+
+.gift-sub{
+  font-size: 1.5rem;
+  color: #000000;
+  width: 100%;
+  text-align: left;
+  margin-top: 25px;
+  font-weight: 100;
+  padding-bottom: 30px;
+  border-bottom: gray 1px solid;
+  
+}
